# plasmopack

./: .gitignore  CITATION.cff  LICENSE  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  getting-started.md  index.md
publish/: ROADMAP.md
publish/decisions/: cci_strategy.md  deg_compositional_strategy.md  pathway_enrichment_strategy.md  tf_analysis_strategy.md
src/plasmopack/: __init__.py
src/plasmopack/_utils/: __init__.py  cache.py  http.py  provenance.py
src/plasmopack/adapters/: __init__.py  ensembl.py  uniprot.py
src/plasmopack/core/: __init__.py
src/plasmopack/datasets/: __init__.py  _registry.py
src/plasmopack/db/: __init__.py  ensembl.py  uniprot.py
src/plasmopack/io/: __init__.py  _anndata.py  _gaf.py  _genesets.py  _gmt.py
src/plasmopack/pl/: __init__.py
src/plasmopack/pp/: __init__.py
src/plasmopack/tl/: __init__.py
src/plasmopack/tl/cci/: __init__.py
tests/: conftest.py  synthetic.py  test_db_ensembl.py  test_db_uniprot.py  test_io_anndata.py  test_io_gaf.py  test_io_genesets.py  test_io_gmt.py  test_package.py  test_provenance.py  test_registry.py  test_synthetic.py  test_utils_cache.py  test_utils_http.py
tests/data/: ensembl_sample.json  sample_pberghei.gaf  uniprot_sample.json
